# NeuroCircuit

./: .dockerignore  .gitignore  CONTRIBUTE.md  NeuroCircuitSetup.iss  README.md  ToDo.md  docker-compose.yml  launcher.py
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: classes.py  main.py  package_manager.py
backend/app/manifests/: blurImageNode.json  cannyEdgeNode.json  combineNode.json  csvInputNode.json  cvtColorImageNode.json  cvtColorspaceImageNode.json  displayImageNode.json  displayNode.json  filterRowsNode.json  flipImageNode.json  handleMissingNode.json  handleMissingValNode.json  inputNode.json  loadImageNode.json  noteNode.json  resizeImageNode.json  rotateImageNode.json  saveImageNode.json  selectColumnNode.json  transformNode.json
backend/app/processors/: node_degree.py  (+1 more)
backend/plugins/: DATA-csvInput.py  DATA-display.py  DATA-filterRows.py  DATA-handleMissingVal.py  DATA-selectColumn.py  DATA-transform.py  DATA_combine.py  DATA_csvInput.py  DATA_filterRows.py  DATA_handleMissingVal.py  DATA_selectColumn.py  VISION-cvtColorImage.py  VISION-displayImage.py  VISION-flipImage.py  VISION-loadImage.py  VISION-resizeImage.py  VISION_blurImage.py  VISION_cannyEdge.py  VISION_cvtColorImage.py  VISION_displayImage.py  VISION_flipImage.py  VISION_resizeImage.py  VISION_rotateImage.py  VISION_saveImage.py  combine.py  csv_load.py  cvt_colorspace.py  display.py  display_image.py  filter_rows.py  flip_image.py  handle_missing.py  load_image.py  resize_image.py  save_image.py  select_col.py  transform.py
backend/tests/: test_main.py
(+61 files in other folders)
