[project]
name = "backend"
version = "0.1.0"
description = "Backend For NeuroCircuit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.117.1",
    "pip>=25.2",
    "pydantic>=2.11.9",
]

[dependency-groups]
aiml = [
    "numpy>=2.3.4",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.3.2",
]
test = [
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]
